--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,43 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Cbtracker</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>CryptoBlades Tracker</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>-->
+    <script>
+    if (
+      // check if user had saved dark as their
+      // theme when accessing page before
+      localStorage.theme === 'dark' ||
+      // or user's requesting dark color
+      // scheme through operating system
+      (!('theme' in localStorage) &&
+        window.matchMedia('(prefers-color-scheme: dark)').matches)
+    ) {
+      // then if we have access to the document and the element
+      // we add the dark class to the html element and
+      // store the dark value in the localStorage
+      if (document && document.documentElement) {
+        document.documentElement.classList.add('dark');
+        localStorage.setItem('theme', 'dark');
+      }
+    } else {
+      // else if we have access to the document and the element
+      // we remove the dark class to the html element and
+      // store the value light in the localStorage
+      if (document && document.documentElement) {
+        document.documentElement.classList.remove('dark');
+        localStorage.setItem('theme', 'light');
+      }
+    }
+  </script>
+  </head>
+  <body class="dark:bg-gray-900 antialiased">
+    <app-root></app-root>
+  </body>
 </html>
