--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203318880-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+          dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'UA-203318880-1');
+    </script>
+
     <script>
     if (
       localStorage.theme === 'dark' ||
