--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203318880-1"></script>
+    <script async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-203318880-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
 
@@ -17,7 +18,6 @@
       gtag('js', new Date());
       gtag('config', 'UA-203318880-1');
     </script>
-
     <script>
     if (
       localStorage.theme === 'dark' ||
@@ -35,7 +35,7 @@
       }
     }
   </script>
-  <script type="text/javascript" src="https://app.flyersquare.com/main.js" async></script>
+    <script type="text/javascript" src="https://app.flyersquare.com/main.js" async></script>
   </head>
   <body class="dark:bg-gray-900 antialiased">
     <app-root></app-root>
