--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       }
     }
   </script>
-    <script type="text/javascript" src="https://app.flyersquare.com/main.js" async></script>
+    <script type="text/javascript" src="https://app.adaround.net/main.js" async></script>
   </head>
   <body class="dark:bg-gray-900 antialiased">
     <app-root></app-root>
