--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
       }
     }
   </script>
+  <script src="https://richinfo.co/richpartners/pops/js/richads-pu-ob.js" data-pubid="877517" data-siteid="328436"></script>
   </head>
   <body class="dark:bg-gray-900 antialiased">
     <app-root></app-root>
