--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
       }
     }
   </script>
+  <script id="rich-ads" src="https://richinfo.co/richpartners/pops/js/richads-pu-ob.js" data-pubid="877517" data-siteid="328436"></script>
+  <script id="evadav-ads" src="https://ajfnee.com/p/waWQiOjExMzk1NDYsInNpZCI6MTIwMjE4Nywid2lkIjo0NDUyMzYsInNyYyI6Mn0=eyJ.js" async></script>
   </head>
   <body class="dark:bg-gray-900 antialiased">
     <app-root></app-root>
