test deployment script

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,38 @@
             },
           ],
         },
+        {
+          code: "placementId_822",
+          mediaTypes: {
+            banner: {
+              sizes: [[300, 250]],
+            },
+          },
+          bids: [
+            {
+              bidder: "smartyads",
+              params: {
+                placementId: 822,
+              },
+            },
+          ],
+        },
+        {
+          code: "placementId_823",
+          mediaTypes: {
+            banner: {
+              sizes: [[468, 60]],
+            },
+          },
+          bids: [
+            {
+              bidder: "smartyads",
+              params: {
+                placementId: 823,
+              },
+            },
+          ],
+        },
       ];
 
       var googletag = googletag || {};
