--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-    <script defer type="text/javascript" src="https://cdn.kiprotect.com/klaro/0.7.18/klaro.js"></script>
+    <script defer type="text/javascript" src="https://cdn.kiprotect.com/klaro/v0.7.18/klaro.js"></script>
+    <script src="https://n1.smartyads.com/?c=b&t=async"></script>
     </script>
     <script
       async
